--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@ p{
 
 .header{
 	text-align:center;
-	background:url(../img/pw_maze_black_2X.png) left top repeat;
+	background:url(../img/fondo.png) left top repeat;
 	padding:38px 0;
 }
 .logo{
