--- a/css/style.css
+++ b/css/style.css
@@ -772,7 +772,7 @@ border: 2px solid #fff;
 ---------------------------------*/
 
 .footer{
-	background:url(../img/pw_maze_black_2X.png) left top repeat;
+	background:url(../img/footer-fondo.png) left top repeat;
 	padding:35px 0 35px;
 }
 .footer-logo{
